feat: add link deletion and production SPA
